<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="teleco.inf.synccity.MainActivity" >

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/action_john"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_john"/>
    <item
        android:id="@+id/action_merlin"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_merlin"/>
    <item
        android:id="@+id/action_part"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/default_part"/>
    <item
        android:id="@+id/load_route"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/load_route"/>

</menu>